--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
 :root {
+  /* Color palette variables */
+  --color-bg: #623435;
+  --color-bg-dark: #281919;
+  --color-highlight-blue: #54E4E4;
+  --color-text: #F5F5F5;
+  --color-icon: #53A7A7;
+  --color-highlight-peach: #F2BDAA;
+  --color-dark: #1E1F26;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,21 +20,38 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  color: var(--color-highlight-peach);
+  text-decoration: none;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--color-text);
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
   margin: 0;
-  font-family: system-ui, sans-serif;
+  color: var(--color-text);
+  background-color: #b999a4;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 25px;
   line-height: 1.1;
+}
+
+h2 {
+  font-size: 18px;
+  margin-bottom: 0.5em;
+}
+
+p {
+  margin-top: 0;
+  margin-bottom: 1em;
+  font-size: 14px;
 }
 
 button {
