--- a/src/index.css
+++ b/src/index.css
@@ -45,27 +45,27 @@ h1 {
 
 h2 {
   font-size: 18px;
-  margin-bottom: 0.5em;
+  margin-bottom: 0;
 }
 
 p {
-  margin: 0 0 0.5em;
+  margin-bottom: 0;
   font-size: 12px;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
+  padding: 5px 15px;
+  font-size: 14px;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: var(--color-text);
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: var(--color-icon);
 }
 button:focus,
 button:focus-visible {
@@ -78,7 +78,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: var(--color-highlight-blue);
   }
   button {
     background-color: #f9f9f9;
