--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .container {
   max-width: 317px;
-  max-height: 780px;
+  max-height: 80%;
   margin: 0 auto;
   padding: 0;
   background: var(--color-bg);
@@ -13,22 +13,39 @@
   margin-bottom: 0.5rem;
 }
 
+h1, h2, p {
+  margin-bottom: 0;
+}
+
 .info > h1, .info > p {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 3px;
+}
+
+.position {
+  color: var(--color-highlight-peach);
 }
 
 .about, .interests {
   padding: 0 1.5rem;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0rem;
 }
 
 .social , .contact {
   display: flex;
   justify-content: center;
-  gap: 1rem;
-  padding: 1.5rem;
+  gap: 1.5rem;
+}
+
+.contact {
+  margin: 1rem;
+}
+
+.social {
+  padding-top: 1rem;
+  padding-bottom: 1.5rem;
 }
 
 button {
