--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 a {
@@ -41,6 +42,7 @@ body {
 h1 {
   font-size: 25px;
   line-height: 1.1;
+  margin-top: 0;
 }
 
 h2 {
@@ -49,7 +51,7 @@ h2 {
 }
 
 p {
-  margin-bottom: 0;
+  margin-block: 0;
   font-size: 12px;
 }
 
