--- a/src/background/day.css
+++ b/src/background/day.css
@@ -36,6 +36,7 @@
   background: rgba(255, 255, 255, 0.8);
   border-radius: 100px;
   animation: float 60s linear infinite;
+  filter: blur(9px);
 }
 
 .cloud::before,
@@ -44,56 +45,57 @@
   position: absolute;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 100px;
+  filter: blur(4px);
 }
 
 .cloud-1 {
-  width: 120px;
-  height: 40px;
+  width: 240px;
+  height: 80px;
   top: 20%;
-  left: -120px;
+  left: -240px;
 }
 
 .cloud-1::before {
-  width: 50px;
-  height: 50px;
-  top: -25px;
-  left: 20px;
+  width: 100px;
+  height: 100px;
+  top: -50px;
+  left: 40px;
 }
 
 .cloud-1::after {
-  width: 60px;
-  height: 40px;
-  top: -15px;
-  right: 20px;
+  width: 120px;
+  height: 80px;
+  top: -30px;
+  right: 40px;
 }
 
 .cloud-2 {
-  width: 180px;
-  height: 50px;
+  width: 360px;
+  height: 100px;
   top: 60%;
-  left: -180px;
-  animation-delay: -30s;
+  left: -360px;
+  animation-delay: -40s;
 }
 
 .cloud-2::before {
-  width: 70px;
-  height: 60px;
-  top: -30px;
-  left: 30px;
+  width: 140px;
+  height: 120px;
+  top: -60px;
+  left: 60px;
 }
 
 .cloud-2::after {
-  width: 80px;
-  height: 50px;
-  top: -20px;
-  right: 30px;
+  width: 160px;
+  height: 100px;
+  top: -40px;
+  right: 60px;
 }
 
 @keyframes float {
   0% {
-    left: -200px;
+    left: -400px;
   }
   100% {
-    left: calc(100% + 200px);
+    left: calc(100% + 400px);
   }
 }
