--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@
 
   /* Light Theme Colors */
   --light-bg-start: #e99783;
-  --light-bg-end: #e0f6ff;
+  --light-bg-end: #cc7b91;
   --light-card-bg: rgba(255, 255, 255, 0.4);
   --light-card-hover: rgba(255, 255, 255, 0.6);
   --light-card-light: rgba(255, 255, 255, 0.7);
